--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,11 +48,13 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-my_root_secret}
+#      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD:-my_root_secret}
+      MYSQL_ROOT_PASSWORD: teamgram
       MYSQL_DATABASE: teamgram
       MYSQL_USER: teamgram
-      MYSQL_PASSWORD: ${DB_PASSWORD:-my_db_secret}
-#       MYSQL_ALLOW_EMPTY_PASSWORD: "true"
+#      MYSQL_PASSWORD: ${DB_PASSWORD:-my_db_secret}
+      MYSQL_PASSWORD: teamgram
+      MYSQL_ALLOW_EMPTY_PASSWORD: "true"
 
   minio:
     image: minio/minio
